Pop over content load done

--- a/src/main/webapp/admin_projects.html
+++ b/src/main/webapp/admin_projects.html
@@ -98,212 +98,65 @@
                 </div>
                 <div class="panel-body">
                     <ul class="list-group" id="memberList">
-                        <li class="member">viswa</li>
+                        <li class="member">Adele</li>
+                        <li class="member">Bob</li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Topic Cards -->
 
-    <div id="cards_landscape_wrap-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                    <!-- <a href=""> -->
-                    <a id="popa" data-popover-content="#members" data-toggle="popover" data-trigger="focus">
-                        <div class="card-flyer">
-                            <div class="text-box">
-                                <div class="text-container" style="margin:5px">
-                                    <h4><img width="20px" src="assets/icons/check.png" /> &nbsp;Marksheet Manager</h4>
-                                    <p class="text-muted text-start">15 open tasks</p>
-                                    <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry.
-                                        Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                                    <table style="margin-top: 6px;">
-                                        <tr>
-                                            <td>Created:</td>
-                                            <td>05/11/2222</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team Leader:</td>
-                                            <td>Admin</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Priority:</td>
-                                            <td class="priority-l"><img src="assets/icons/low.png" />&nbsp;Low</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team:</td>
-                                            <td>5 Employee</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                    <a id="popBtn1" class="popover-dismiss" tabindex="0" role="button" data-bs-toggle="popover1"
-                        data-bs-trigger="focus hover" title="Members" data-bs-content="<ul><li>viswa</li></ul>">
-                        <div class="card-flyer">
-                            <div class="text-box">
-                                <div class="text-container" style="margin:5px">
-
-                                    <div class="float-start">
-                                        <h4><img width="20px" src="assets/icons/check.png" /> &nbsp;Marksheet Manager
+    <!-- Projects Cards -->
+    <div id="cards">
+        <div id="cards_landscape_wrap-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                        <a data-popover-content="#members" data-toggle="popover" data-trigger="focus hover">
+                            <div class="card-flyer">
+                                <div class="text-box">
+                                    <div class="text-container" style="margin:5px">
+                                        <input type="text" hidden id="project_id">
+                                        <h4><img width="20px" src="assets/icons/check.png" /> &nbsp;Marksheet
+                                            Manager
                                         </h4>
+                                        <p class="text-muted text-start">15 open tasks</p>
+                                        <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                            industry.
+                                            Lorem
+                                            Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                        <table class="mt-6">
+                                            <tr>
+                                                <td>Created</td>
+                                                <td>05/11/2222</td>
+                                            </tr>
+                                            <tr>
+                                                <td style="padding-right:40px">Owner</td>
+                                                <td>Admin</td>
+                                            </tr>
+                                            <!-- <tr>
+                                                <td>Priority:</td>
+                                                <td class="priority-l"><img src="assets/icons/low.png" />&nbsp;Low</td>
+                                            </tr> -->
+                                            <tr>
+                                                <td>Team</td>
+                                                <td>5 Employee</td>
+                                            </tr>
+                                        </table>
                                     </div>
-                                    <div class="float-end ml-12">
-                                        <div class="dropdown">
-                                            <button class="btn-card"><i
-                                                    class="fa-solid fa-ellipsis-vertical"></i></button>
-                                            <div class="dropdown-content">
-                                                <button class="btn" style="width:100%">Edit</button>
-                                                <button class="btn" style="width:100%">Delete</button>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="clearfix"></div>
-                                    <p class="text-muted text-start">15 open tasks</p>
-                                    <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry.
-                                        Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                                    <table style="margin-top: 6px;">
-                                        <tr>
-                                            <td>Created:</td>
-                                            <td>05/11/2222</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team Leader:</td>
-                                            <td>Admin</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Priority:</td>
-                                            <td class="priority-m"><img width="16px"
-                                                    src="assets/icons/medium.png" />&nbsp;Medium</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team:</td>
-                                            <td>5 Employee</td>
-                                        </tr>
-                                    </table>
                                 </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                    <a href="">
-                        <div class="card-flyer">
-                            <div class="text-box">
-                                <div class="text-container" style="margin:5px">
-                                    <h4><img width="20px" src="assets/icons/check.png" /> &nbsp;Marksheet Manager</h4>
-                                    <p class="text-muted text-start">15 open tasks</p>
-                                    <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry.
-                                        Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                                    <table style="margin-top: 6px;">
-                                        <tr>
-                                            <td>Created:</td>
-                                            <td>05/11/2222</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team Leader:</td>
-                                            <td>Admin</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Priority:</td>
-                                            <td class="priority-h"><img src="assets/icons/high.png" />&nbsp;high</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team:</td>
-                                            <td>5 Employee</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                    <a href="">
-                        <div class="card-flyer">
-                            <div class="text-box">
-                                <div class="text-container" style="margin:5px">
-                                    <h4><img width="20px" src="assets/icons/check.png" /> &nbsp;Marksheet Manager</h4>
-                                    <p class="text-muted text-start">15 open tasks</p>
-                                    <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry.
-                                        Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                                    <table style="margin-top: 6px;">
-                                        <tr>
-                                            <td>Created:</td>
-                                            <td>05/11/2222</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team Leader:</td>
-                                            <td>Admin</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Priority:</td>
-                                            <td class="priority-l"><img src="assets/icons/low.png" />&nbsp;Low</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team:</td>
-                                            <td>5 Employee</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                    <a id="cardId" data-custom-value="1" style="cursor:pointer">
-                        <div class="card-flyer">
-                            <div class="text-box">
-                                <div class="text-container" style="margin:5px">
-                                    <h4><img width="20px" src="assets/icons/check.png" /> &nbsp;Marksheet Manager</h4>
-                                    <p class="text-muted text-start">15 open tasks</p>
-                                    <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                        industry.
-                                        Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                                    <table style="margin-top: 6px;">
-                                        <tr>
-                                            <td>Created:</td>
-                                            <td>05/11/2222</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team Leader:</td>
-                                            <td>Admin</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Priority:</td>
-                                            <td class="priority-l"><img src="assets/icons/low.png" />&nbsp;Low</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Team:</td>
-                                            <td>5 Employee</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modals -->
+
+
     <!-- Edit Modal -->
     <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel"
         aria-hidden="true">
@@ -335,11 +188,13 @@
                             <label for="members" id="members">Members</label>
                             <div class="form-group has-search mb-3 mt-1">
                                 <span class="fa fa-search form-control-search"></span>
-                                <input type="text" class="form-control" onkeyup="memberFilter(this)" placeholder="Search">
+                                <input type="text" class="form-control" onkeyup="memberFilter(this)"
+                                    placeholder="Search">
                             </div>
                             <ul class="list-group" id="editMemberList">
                                 <li class="list-group-item">
-                                    <input class="form-check-input me-1" id="group1" type="checkbox" value="" aria-label="...">
+                                    <input class="form-check-input me-1" id="group1" type="checkbox" value=""
+                                        aria-label="...">
                                     <label for="group1">Main List</label>
                                 </li>
                                 <li class="list-group-item">
@@ -387,7 +242,31 @@
             </div>
         </div>
     </div>
+    <!-- Modal end -->
+    <!-- Confirm Modal -->
+    <div id="deleteModal" class="modal fade">
+        <div class="modal-dialog modal-confirm">
+            <div class="modal-content">
+                <div class="modal-header flex-column">
+                    <div class="icon-box">
+                        <i class="fas fa-times-circle"></i>
+                    </div>
+                    <h4 class="modal-title w-100">Are you sure?</h4>
+                </div>
+                <form id="delete-task" name="delete-task">
 
+                    <div class="modal-body">
+                        <p>Do you really want to delete these records? This process cannot be undone.</p>
+                    </div>
+
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -398,9 +277,6 @@
     <script src="assets/js/projects.js"></script>
     <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
-    <script>
-        new bootstrap.Modal(document.getElementById("editModal")).show();
-    </script>
 </body>
 
 </html>
