--- a/src/main/webapp/admin_projects.html
+++ b/src/main/webapp/admin_projects.html
@@ -44,11 +44,11 @@
                         Projects
                     </span>
                 </a>
-                <div class="nav_list"> <a href="#" class="nav_link">
+                <div class="nav_list"> <a href="admin" class="nav_link">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
-                    <a href="admin" class="nav_link">
+                    <a href="admin_users" class="nav_link">
                         <i class='bx bx-user nav_icon'></i>
                         <span class="nav_name">Users</span> </a>
                     <a href="admin_projects" class="nav_link active">
