--- a/src/main/webapp/employee.html
+++ b/src/main/webapp/employee.html
@@ -35,11 +35,11 @@
             <img width="37px" src="assets/icons/icon.png" alt="project_management">
           </span>
         </a>
-        <div class="nav_list"> <a href="#" class="nav_link">
+        <div class="nav_list"> <a href="admin" class="nav_link">
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Dashboard</span>
           </a>
-          <a href="admin" class="nav_link">
+          <a href="admin_users" class="nav_link">
             <i class='bx bx-user nav_icon'></i>
             <span class="nav_name">Users</span> </a>
           <a href="admin_projects" class="nav_link">
