--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -10,17 +10,21 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/toast.css" />
-    <link rel="stylesheet" href="assets/css/modal.css" />
+    <!-- <link rel="stylesheet" href="assets/css/modal.css" /> -->
+    <link rel="stylesheet" href="assets/css/admin.css" />
     <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
+    <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
 </head>
 
 <body id="body-pd">
+    <div class="loader"></div>
     <header class="header" id="header">
         <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
         <div>
@@ -41,12 +45,11 @@
                         Projects
                     </span>
                 </a>
-                <div class="nav_list">
-                    <a href="admin" class="nav_link">
+                <div class="nav_list"> <a href="admin" class="nav_link active">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
-                    <a href="admin_users" class="nav_link active">
+                    <a href="admin_users" class="nav_link">
                         <i class='bx bx-user nav_icon'></i>
                         <span class="nav_name">Users</span> </a>
                     <a href="admin_projects" class="nav_link">
@@ -59,165 +62,144 @@
                     </a>
                 </div>
             </div>
-            <a href="#" onclick="logout()" class="nav_link"> <i class='bx bx-log-out nav_icon'></i>
+            <a href="#" onclick="logout()" class="nav_link">
+                <i class='bx bx-log-out nav_icon'></i>
                 <span class="nav_name">SignOut</span>
             </a>
         </nav>
     </div>
-    <div class="container mt-1" id="users">
-        <div class="float-left">
-            <h3>Users</h3>
-        </div>
-        <div class="row">
-            <div class="mt-5 mb-3">
-                <button class="btn btn-primary" data-toggle="modal" data-target="#formModal">
-                    <i class="fa fa-add"></i>Add User
-                </button>
-            </div>
-            <div class="col-md-12">
-                <table id="usersTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                            <th>uid</th>
-                            <th>SNo</th>
-                            <th>Username</th>
-                            <th>E-Mail</th>
-                            <th>Role</th>
-                            <th>Joined</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
 
-                    <tbody id="tbody">
-                    </tbody>
-                </table>
+    <div class="container" style="margin-top: 70px">
+        <h3>Dashboard</h3>
+    </div>
+
+
+    <!-- ======================= Cards ================== -->
+    <div class="cardBox">
+        <div class="card">
+            <div>
+                <div class="numbers">4</div>
+                <div class="cardName">Projects</div>
+            </div>
+
+            <div class="iconBx">
+                <i class='bx bx-briefcase'></i>
+            </div>
+        </div>
+
+        <div class="card">
+            <div>
+                <div class="numbers">12</div>
+                <div class="cardName">Users</div>
+            </div>
+
+            <div class="iconBx">
+                <i class='bx bx-user'></i>
+            </div>
+        </div>
+
+        <div class="card">
+            <div>
+                <div class="numbers">5</div>
+                <div class="cardName">Tasks</div>
+            </div>
+
+            <div class="iconBx">
+                <i class='bx bx-task'></i>
+            </div>
+        </div>
+
+        <div class="card">
+            <div>
+                <div class="numbers">4</div>
+                <div class="cardName">Open Tasks</div>
+            </div>
+
+            <div class="iconBx">
+                <i class="fas fa-tasks"></i>
             </div>
         </div>
     </div>
-    <!-- Modal -->
-    <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="formModalLabel">Add User</h5>
-                    <button type="button" class="btn btn-close" data-dismiss="modal"></button>
-                </div>
-                <form name="add-user" id="add-user">
-                    <div class="modal-body">
-                        <div class="mb-3">
-                            <label for="name">Username</label>
-                            <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp"
-                                placeholder="Enter username" required />
-                            <div id="nameHelp" hidden class="form-text">* Enter atleast 3 characters.</div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="email" name="email" aria-describedby="email"
-                                placeholder="Enter email" required />
-                            <div id="emailHelp" hidden class="form-text">* Enter valid email.</div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" id="password" class="form-control"
-                                aria-describedby="passwordHelpBlock"
-                                placeholder="Enter password with small, capital and special character" required>
-                            <div id="passwordHelp" hidden class="form-text">
-                                Your password must contain letters, numbers, special characters.
+
+    <!-- ================ Recent Tasks ================= -->
+    <div class="details">
+        <div class="recentTasks">
+            <div class="cardHeader">
+                <h2>Recent Tasks</h2>
+                <a href="admin_tasks" class="btn">View All</a>
+            </div>
+
+            <table>
+                <thead>
+                    <tr>
+                        <td>Title</td>
+                        <td>Project</td>
+                        <td>Creator</td>
+                        <td>Assignee</td>
+                        <td>Priority</td>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Develop 404 page</td>
+                        <td>Marksheet Manager</td>
+                        <td>admin</td>
+                        <td>viswa</td>
+                        <td><span class="status low">Low</span></td>
+                    </tr>
+                    <tr>
+                        <td>Develop 404 page</td>
+                        <td>Marksheet Manager</td>
+                        <td>admin</td>
+                        <td>viswa</td>
+                        <td><span class="status medium">Medium</span></td>
+                    </tr>
+                    <tr>
+                        <td>Develop 404 page</td>
+                        <td>Marksheet Manager</td>
+                        <td>admin</td>
+                        <td>viswa</td>
+                        <td><span class="status high">High</span></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- ================= New Employee ================ -->
+        <div class="recentEmployee">
+            <div class="cardHeader">
+                <h2>Recent Customers</h2>
+            </div>
+
+            <table>
+                <tr>
+                    <td width="60px">
+                        <div class="imgBx">
+                            <div class="profile">
+                                A
                             </div>
+                            <!-- <img src="assets/imgs/customer02.jpg" alt=""> -->
                         </div>
-                        <div class="mb-3">
-                            <label for="role">Role</label>
-                            <br />
-                            <select class="form-control" id="role" name="role" aria-label=".form-select-lg example">
-                                <option value="employee" selected>Employee</option>
-                                <option value="manager">Manager</option>
-                                <option value="admin">Admin</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                            Close
-                        </button>
-                        <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
-                    </div>
-                </form>
-            </div>
+                    </td>
+                    <td>
+                        <h4>Amit <br> <span>Employee</span></h4>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
-    <!-- Modal end -->
-    <!-- Edit Modal -->
-    <div class="modal fade" id="formEditModal" tabindex="-1" role="dialog" aria-labelledby="formEditModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="formModalLabel">Edit User</h5>
-                    <button type="button" class="btn btn-close" data-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="edit-user" name="edit-user">
-                        <div class="mb-3">
-                            <label for="name">Username</label>
-                            <input type="text" class="form-control" id="ename" name="ename" aria-describedby="enameHelp"
-                                placeholder="Enter username" required />
-                        </div>
-                        <div class="mb-3">
-                            <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="eemail" name="eemail"
-                                aria-describedby="eemailHelp" placeholder="Enter email" required />
-                        </div>
-                        <div class="mb-3">
-                            <label for="role">Role</label>
-                            <br />
-                            <select class="form-control" id="erole" name="erole" aria-label=".form-select-lg example">
-                                <option value="employee" selected>Employee</option>
-                                <option value="manager">Manager</option>
-                                <option value="admin">Admin</option>
-                            </select>
-                        </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                        Close
-                    </button>
-                    <input type="submit" id="esubmit" class="btn btn-primary" value="Update" />
-                </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Modal end -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
 
-    <!-- Confirm Modal -->
-    <div id="deleteModal" class="modal fade">
-        <div class="modal-dialog modal-confirm">
-            <div class="modal-content">
-                <div class="modal-header flex-column">
-                    <div class="icon-box">
-                        <i class="fas fa-times-circle"></i>
-                    </div>
-                    <h4 class="modal-title w-100">Are you sure?</h4>
-                </div>
-                <form id="delete-task" name="delete-task">
-
-                    <div class="modal-body">
-                        <p>Do you really want to delete these records? This process cannot be undone.</p>
-                    </div>
-
-                    <div class="modal-footer justify-content-center">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-    </div>
-    <script src="assets/js/jquery/jquery.min.js"></script>
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="assets/js/toast.js"></script>
-    <script src="assets/js/validator.js"></script>
     <script src="assets/js/admin.js"></script>
-    <script src="as
+    <script src="assets/js/api_utility.js"></script>
+    <script>
+        window.addEventListener("load", function alertFunc() {
+            $(".loader").fadeOut("slow");
+        });
+    </script>
+</body>
+
+</html>
