--- a/src/main/webapp/employee_tasks.html
+++ b/src/main/webapp/employee_tasks.html
@@ -56,11 +56,11 @@
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Dashboard</span>
           </a>
-          <a href="employee_projects" class="nav_link active">
+          <a href="employee_projects" class="nav_link">
             <i class='bx bx-briefcase nav_icon'></i>
             <span class="nav_name">Projects</span>
           </a>
-          <a href="employee_tasks" class="nav_link">
+          <a href="employee_tasks" class="nav_link active">
             <i class='bx bx-task nav_icon'></i>
             <span class="nav_name">Tasks</span>
           </a>
@@ -74,19 +74,11 @@
   </div>
 
   <div class="container mt-2">
-    <h3>Projects</h3>
+    <h3>Dashboard</h3>
   </div>
   <div class="clearfix"></div>
   <br />
-  <div>
-    <div id="cards_landscape_wrap-2">
-      <div class="container">
-        <div class="row" id="cards">
-
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="row"></div>
 </body>
 <script src="assets/js/toast.js"></script>
 <script src="assets/js/jquery/jquery.min.js"></script>
